# NRI

./: CMakeLists.txt
Include/: NRI.h  NRIDescs.h  NRIMacro.h
Include/Extensions/: NRIWrapperWebGPU.h
Resources/: Version.h
Source/Creation/: Creation.cpp
Source/D3D11/: CommandBufferD3D11.hpp  CommandBufferEmuD3D11.hpp  DescriptorD3D11.h  DescriptorD3D11.hpp  DeviceD3D11.hpp  ImplD3D11.cpp
Source/D3D12/: CommandBufferD3D12.hpp  DescriptorD3D12.h  DescriptorD3D12.hpp  DeviceD3D12.h  DeviceD3D12.hpp  ImplD3D12.cpp  PipelineD3D12.hpp  PipelineLayoutD3D12.hpp
Source/NONE/: ImplNONE.cpp
Source/Shared/: ImguiInterface.hpp  SharedExternal.h  UpscalerInterface.hpp
Source/VK/: CommandBufferVK.hpp  ConversionVK.h  DescriptorVK.h  DescriptorVK.hpp  DeviceVK.hpp  ImplVK.cpp  SwapChainVK.hpp
Source/Validation/: DescriptorPoolVal.hpp  DescriptorVal.h  DescriptorVal.hpp  DeviceVal.h  DeviceVal.hpp  ImplVal.cpp
Source/WebGPU/: ImplWebGPU.cpp
